updating bootstrap: lower case

--- a/bootstrap.env
+++ b/bootstrap.env
@@ -1,6 +1,10 @@
 # summit environment
 SUMMIT_ALLOCATION=WarningNotSet
 
+# make sure the allocation is in lower case
+SUMMIT_ALLOCATION=`echo "$SUMMIT_ALLOCATION" | awk '{print tolower($0)}'`
+
+
 FAILURE=1
 # print
 echo ------------------------------------------------------------
