update to exit on no allocation

--- a/bootstrap.env
+++ b/bootstrap.env
@@ -10,7 +10,7 @@ FAILURE=1
 echo ------------------------------------------------------------
 echo Summit Environment
 echo ------------------------------------------------------------
-if [ $SUMMIT_ALLOCATION == "WarningNotSet" ]; then
+if [ $SUMMIT_ALLOCATION == "warningnotset" ]; then
     echo
     echo ERROR
     echo ERROR: summit allocation not set ... cannot continue
