--- a/bootstrap.env
+++ b/bootstrap.env
@@ -1,25 +1,35 @@
-# summit environment
-SUMMIT_ALLOCATION=WarningNotSet
+# Pantheon work directory location 
+PANTHEON_BASE_PATH=WarningNotSet
 
-# make sure the allocation is in lower case
-SUMMIT_ALLOCATION=`echo "$SUMMIT_ALLOCATION" | awk '{print tolower($0)}'`
-
+# compute allocation for running scripts
+COMPUTE_ALLOCATION=WarningNotSet
 
 FAILURE=1
 # print
 echo ------------------------------------------------------------
-echo Summit Environment
+echo Pantheon Bootstrap Environment
 echo ------------------------------------------------------------
-if [ $SUMMIT_ALLOCATION == "warningnotset" ]; then
+if [ $PANTHEON_BASE_PATH == "WarningNotSet" ]; then
     echo
     echo ERROR
-    echo ERROR: summit allocation not set ... cannot continue
+    echo ERROR: PANTHEON_BASE_PATH not set ... cannot continue
+    echo ERROR
+    echo
+    echo edit the file \'bootstrap.env\' to reflect the directory
+    echo where Pantheon should build, etc. in, then re-run 
+    echo
+    exit $FAILURE
+fi 
+if [ $COMPUTE_ALLOCATION == "WarningNotSet" ]; then
+    echo
+    echo ERROR
+    echo ERROR: COMPUTE_ALLOCATION not set ... cannot continue
     echo ERROR
     echo
     echo edit the file \'bootstrap.env\' to reflect your allocation, then re-run 
     echo
     exit $FAILURE
 fi 
-echo allocation .... $SUMMIT_ALLOCATION
+echo PANTHEON_BASE_PATH .... $PANTHEON_BASE_PATH
+echo COMPUTE_ALLOCATION .... $COMPUTE_ALLOCATION
 echo ------------------------------------------------------------
-
