Newer spack commit for vtk-h@0.6.5 No cache option to build everything from scratch

--- a/inputs/spack/spack.yaml
+++ b/inputs/spack/spack.yaml
@@ -93,7 +93,7 @@ spack:
       providers: {}
     vtk-h:
       variants: ~cuda~openmp+mpi+serial+shared
-      version: [develop]
+      version: [0.6.5]
       target: []
       compiler: []
       buildable: true
